# 1DTransport

./: CMakeLists.txt  LICENSE.md  README.md  problem_gen.py  test_transportation.py  transportation.py
cpp/: main.cpp  transportation_1d.cpp  transportation_1d.hpp
